sf-hrms/force-app/main/default/objects/Payroll_Cycle__c/Payroll_Cycle__c.object-meta.xml
<CustomObject>
    <label>Payroll Cycle</label>
    <nameField>
        <label>Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payroll Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>