sf-hrms/force-app/main/default/objects/Payroll_Cycle__c/fields/Cut_Off_Date__c.field-meta.xml
<CustomField><fullName>Cut_Off_Date__c</fullName><label>Cut Off Date</label><type>Date</type></CustomField>