sf-hrms/force-app/main/default/objects/Payroll_Cycle__c/fields/Locked__c.field-meta.xml
<CustomField><fullName>Locked__c</fullName><label>Locked</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>