sf-hrms/force-app/main/default/objects/Payroll_Cycle__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <length>20</length>
    <type>Text</type>
    <required>true</required>
</CustomField>