sf-hrms/force-app/main/default/objects/Payroll_Cycle__c/fields/Pay_Date__c.field-meta.xml
<CustomField><fullName>Pay_Date__c</fullName><label>Pay Date</label><type>Date</type></CustomField>