sf-hrms/force-app/main/default/objects/Payroll_Cycle__c/fields/Processed_By__c.field-meta.xml
<CustomField><fullName>Processed_By__c</fullName><label>Processed By</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Processed Cycles</relationshipLabel><relationshipName>Processed_Cycles</relationshipName></CustomField>