sf-hrms/force-app/main/default/objects/Payroll_Cycle__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
        <value><fullName>Processing</fullName><default>false</default><label>Processing</label></value>
        <value><fullName>Finalized</fullName><default>false</default><label>Finalized</label></value>
        <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
    </valueSetDefinition></valueSet>
</CustomField>