sf-hrms/force-app/main/default/objects/Payroll_Cycle__c/fields/Total_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Employees__c</fullName>
    <label>Total Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>