sf-hrms/force-app/main/default/objects/Payroll_Cycle__c/fields/Total_Gross__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross__c</fullName>
    <label>Total Gross Payroll</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>